Create distribution
